<resources>
    <string name="app_name">guide-app</string>
    <string name="title_home">Home</string>
    <string name="title_information">Informasi</string>
    <string name="title_work">Pekerjaan</string>
    <string name="title_profile">Profile</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="laporkan_masalah">Laporkan Masalah</string>
    <string name="bantuan">Bantuan</string>
    <string name="profile_picture">profile picture</string>
    <string name="nama">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="email_example">example@gmail.com</string>
    <string name="keahlian">Keahlian</string>
    <string name="kelahiran">Kelahiran</string>
    <string name="jenisKelamin">Jenis Kelamin</string>
    <string name="telepon">Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="judul_help">Apa Ya Beb Judul ?</string>
    <string name="desc_saran">Segala masukkan akan segera diterima dan dibaca untuk menjadi evaluasi website kami !</string>
    <string name="desc_help">Ini tu isinya deskripsi nah aku bingung mau nulis apa, aku pengen dia agak panjang dikitlah buat tampil di layoutnya, oh iya nih ada bingung kalo di figma kan list nah apa ini jga mau dibuat list atau just kayak pencarian doang </string>
    <string name="info_help">Jika masih ada pertanyaan yang tidak terjawab, anda dapat mengajukan pertanyaan kepada kami melalui email yang telah kami sediakan, cari sendiri!</string>
    <string name="desc_guidein">Guide.in adalah sebuah aplikasi berbasis website opensource yang bebas diakses oleh siapapun tanpa perlu membayar sepeserpun. Disini kalian akan menemukan banyak inspirasi, hal hal menarik dan tentunya bermanfaat dalam dunia teknologi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="saran">Kritik dan Saran</string>
    <string name="intro_saran">Segala masukkan akan segera diterima dan dibaca untuk menjadi evaluasi website kami !</string>
    <string name="kategori">Kategori</string>
    <string name="berita_informasi2">AI sudah mendominasi teknologi</string>
    <string name="berita_informasi1">Berikut website terbaru yang banyak dikunjungi akhir-akhir ini</string>
    <string name="berita">Berita</string>
    <string name="jelajahi">Jelajahi</string>
    <!--    //KONEKSI ERROR//-->
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="btn_edit">Edit</string>
    <string name="intro_report">Laportkan masalah untuk memberikan letak kekurangan atau kesalahan pada website kami agar segera diperbaiki</string>
    <string name="kategoriMasalah">Kategori Masalah</string>
    <string name="koneksi_error">Koneksi bermasalah</string>
    <string name="masuk">Masuk menggunakan Google</string>
    <string-array name="kategori_options">
        <item>Kategori 1</item>
        <item>Kategori 2</item>
        <item>Kategori 3</item>
    </string-array>
</resources>